src/scss/_root.scss
html {
    font-size: $font_size;
}

body {
    display: none;
    background-color: $background_color;
    font-size: 1rem;
    line-height: 1.5rem;
    font-family: $body_font_family;
}

.mdl-layout__content:focus {
    outline: none;
}

h1, h2, h3, h4, h5, h6, blockquote, span.mdl-layout-title,
a.download > code.download {
    font-family: $body_font_family;
}

.page-content {
    font-size: 1rem;
    p, ul, ol, dl, dd, dt, table, th, td {
        font-size: 1rem;
    }
}

.brand {
    color: inherit;
    text-decoration: none;
}

/*
 *  Figure Directive Styles
 */
img {
    margin: 14px auto;
    max-width: 90%;
}

.figure {
    margin: 14px auto;
    max-width: 90%;
}

/*
 * Download Link Styles
 */

a.download > i.material-icons {
    position: relative;
    top: 5px;
}

a.download {
    text-decoration: none;
}

div.section a {
    color: rgb(103,58,183);
}

/*
 * Code block with line numbers (sphinx uses table to arrange them)
*/
table.highlighttable {
    margin: 0;
    width: 100%;

    td.linenos {
        text-align: center !important;
        width: 44px;
        padding: 0 !important;

        div > pre {
            background: white;
            margin: 0;
            padding: 24px 0px !important;
        }
    }

    td.code {
        padding: 0 !important;

        div > pre {
            margin: 0;
            padding: 24px;
        }
    }
}

/*
 * Basic style alignment
 */

.align-center {
    margin-left: auto !important;
    margin-right: auto !important;
}

.align-default {
    margin-left: auto !important;
    margin-right: auto !important;
}

